// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiler (react) should build the example with config complete.json 1`] = `
Object {
  "2.092afbaa57d1218da8fb.css": "16e4925d2f0de443907834b33b46394b",
  "2.092afbaa57d1218da8fb.js": "c92409261cb8480ae804bdbaf6ada2d6",
  "2.092afbaa57d1218da8fb.js.map": "2a05f3569e6aea08ffaad89852ad5f8c",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "3.724e9291ed4ab29de160.js": "1bb44ae70046b0a9a0c9dc7ef126f8c8",
  "3.724e9291ed4ab29de160.js.map": "359ee838fcc6d62b2eba8f162c7fbaea",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "index.html": "65ef9b2d4ef465b7704cd881e0afe770",
  "main.ce97d6f39fc2fdc77993.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.ce97d6f39fc2fdc77993.js": "c20068b090eed6f7fe00eb0a0a2ca4a2",
  "main.ce97d6f39fc2fdc77993.js.map": "72c863c4dbd00f61b14f08e9b71a0b6a",
  "manifest.2962a6b0d339e9338b92.js": "e6ce3a9ed6fd133636e257f02bf53041",
  "manifest.2962a6b0d339e9338b92.js.map": "d87d7f424a6e958b4db99073208e9b46",
  "vendors.517232912109a04a6e61.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.517232912109a04a6e61.js": "11a715e411a4bb7278b9ac34201ce56e",
  "vendors.517232912109a04a6e61.js.map": "d0b9fcb9428be5eb2c3ecaddc3e9d8ab",
}
`;

exports[`Compiler (react) should build the example with config disabled.json 1`] = `
Object {
  "2.092afbaa57d1218da8fb.css": "16e4925d2f0de443907834b33b46394b",
  "2.092afbaa57d1218da8fb.js": "c92409261cb8480ae804bdbaf6ada2d6",
  "2.092afbaa57d1218da8fb.js.map": "2a05f3569e6aea08ffaad89852ad5f8c",
  "3.724e9291ed4ab29de160.js": "1bb44ae70046b0a9a0c9dc7ef126f8c8",
  "3.724e9291ed4ab29de160.js.map": "359ee838fcc6d62b2eba8f162c7fbaea",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "index.html": "e18397eaf23ce1bedbfb2542fe6f25d5",
  "main.fa12b930c7499eb3acf2.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.fa12b930c7499eb3acf2.js": "e99cbc712f27bc24f7f8dc1e3a026ab8",
  "main.fa12b930c7499eb3acf2.js.map": "bca49995f958cee554606217244fcb50",
  "manifest.2962a6b0d339e9338b92.js": "e6ce3a9ed6fd133636e257f02bf53041",
  "manifest.2962a6b0d339e9338b92.js.map": "d87d7f424a6e958b4db99073208e9b46",
  "vendors.517232912109a04a6e61.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.517232912109a04a6e61.js": "11a715e411a4bb7278b9ac34201ce56e",
  "vendors.517232912109a04a6e61.js.map": "d0b9fcb9428be5eb2c3ecaddc3e9d8ab",
}
`;

exports[`Compiler (react) should build the example with config from package.json 1`] = `
Object {
  "2.092afbaa57d1218da8fb.css": "16e4925d2f0de443907834b33b46394b",
  "2.092afbaa57d1218da8fb.js": "c92409261cb8480ae804bdbaf6ada2d6",
  "2.092afbaa57d1218da8fb.js.map": "2a05f3569e6aea08ffaad89852ad5f8c",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "3.724e9291ed4ab29de160.js": "1bb44ae70046b0a9a0c9dc7ef126f8c8",
  "3.724e9291ed4ab29de160.js.map": "359ee838fcc6d62b2eba8f162c7fbaea",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "bar/index.html": "ecdf97fe60c58ec822bc40eaf25932ee",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "icon_128x128.deb0a118869f6d69fcc5e9852ad32d81.png": "deb0a118869f6d69fcc5e9852ad32d81",
  "icon_192x192.f5d0f0f2ed01fca7cb69e70f6af11529.png": "f5d0f0f2ed01fca7cb69e70f6af11529",
  "icon_256x256.4661d370dd248c9f9d48e78c8a07776d.png": "4661d370dd248c9f9d48e78c8a07776d",
  "icon_96x96.1c0003f895382900e1a8ce6fa0a1b672.png": "1c0003f895382900e1a8ce6fa0a1b672",
  "index.html": "b69f613182ad92913d818d6ded5bdeac",
  "main.ce97d6f39fc2fdc77993.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.ce97d6f39fc2fdc77993.js": "c20068b090eed6f7fe00eb0a0a2ca4a2",
  "main.ce97d6f39fc2fdc77993.js.map": "72c863c4dbd00f61b14f08e9b71a0b6a",
  "manifest.2962a6b0d339e9338b92.js": "e6ce3a9ed6fd133636e257f02bf53041",
  "manifest.2962a6b0d339e9338b92.js.map": "d87d7f424a6e958b4db99073208e9b46",
  "manifest.bc9f52edf87c052e960e4516d360c190.json": "bc9f52edf87c052e960e4516d360c190",
  "vendors.517232912109a04a6e61.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.517232912109a04a6e61.js": "11a715e411a4bb7278b9ac34201ce56e",
  "vendors.517232912109a04a6e61.js.map": "d0b9fcb9428be5eb2c3ecaddc3e9d8ab",
}
`;

exports[`Compiler (react) should build the example with config image-optimization-disabled.json 1`] = `
Object {
  "2.092afbaa57d1218da8fb.css": "16e4925d2f0de443907834b33b46394b",
  "2.092afbaa57d1218da8fb.js": "c92409261cb8480ae804bdbaf6ada2d6",
  "2.092afbaa57d1218da8fb.js.map": "2a05f3569e6aea08ffaad89852ad5f8c",
  "3.724e9291ed4ab29de160.js": "1bb44ae70046b0a9a0c9dc7ef126f8c8",
  "3.724e9291ed4ab29de160.js.map": "359ee838fcc6d62b2eba8f162c7fbaea",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "index.html": "fbeebe6aa399b318cb2b58a44d46bbfa",
  "main.fa12b930c7499eb3acf2.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.fa12b930c7499eb3acf2.js": "e99cbc712f27bc24f7f8dc1e3a026ab8",
  "main.fa12b930c7499eb3acf2.js.map": "bca49995f958cee554606217244fcb50",
  "manifest.2962a6b0d339e9338b92.js": "e6ce3a9ed6fd133636e257f02bf53041",
  "manifest.2962a6b0d339e9338b92.js.map": "d87d7f424a6e958b4db99073208e9b46",
  "vendors.517232912109a04a6e61.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.517232912109a04a6e61.js": "11a715e411a4bb7278b9ac34201ce56e",
  "vendors.517232912109a04a6e61.js.map": "d0b9fcb9428be5eb2c3ecaddc3e9d8ab",
}
`;

exports[`Compiler (react) should build the example with config manifest.json 1`] = `
Object {
  "2.092afbaa57d1218da8fb.css": "16e4925d2f0de443907834b33b46394b",
  "2.092afbaa57d1218da8fb.js": "c92409261cb8480ae804bdbaf6ada2d6",
  "2.092afbaa57d1218da8fb.js.map": "2a05f3569e6aea08ffaad89852ad5f8c",
  "3.724e9291ed4ab29de160.js": "1bb44ae70046b0a9a0c9dc7ef126f8c8",
  "3.724e9291ed4ab29de160.js.map": "359ee838fcc6d62b2eba8f162c7fbaea",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "icon_128x128.deb0a118869f6d69fcc5e9852ad32d81.png": "deb0a118869f6d69fcc5e9852ad32d81",
  "icon_192x192.f5d0f0f2ed01fca7cb69e70f6af11529.png": "f5d0f0f2ed01fca7cb69e70f6af11529",
  "icon_256x256.4661d370dd248c9f9d48e78c8a07776d.png": "4661d370dd248c9f9d48e78c8a07776d",
  "icon_96x96.1c0003f895382900e1a8ce6fa0a1b672.png": "1c0003f895382900e1a8ce6fa0a1b672",
  "index.html": "8910f2c05d4c7c2766447fe6eec10be8",
  "main.fa12b930c7499eb3acf2.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.fa12b930c7499eb3acf2.js": "e99cbc712f27bc24f7f8dc1e3a026ab8",
  "main.fa12b930c7499eb3acf2.js.map": "bca49995f958cee554606217244fcb50",
  "manifest.2962a6b0d339e9338b92.js": "e6ce3a9ed6fd133636e257f02bf53041",
  "manifest.2962a6b0d339e9338b92.js.map": "d87d7f424a6e958b4db99073208e9b46",
  "manifest.bc9f52edf87c052e960e4516d360c190.json": "bc9f52edf87c052e960e4516d360c190",
  "vendors.517232912109a04a6e61.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.517232912109a04a6e61.js": "11a715e411a4bb7278b9ac34201ce56e",
  "vendors.517232912109a04a6e61.js.map": "d0b9fcb9428be5eb2c3ecaddc3e9d8ab",
}
`;

exports[`Compiler (react) should build the example with config prerender-disabled.json 1`] = `
Object {
  "2.092afbaa57d1218da8fb.css": "16e4925d2f0de443907834b33b46394b",
  "2.092afbaa57d1218da8fb.js": "c92409261cb8480ae804bdbaf6ada2d6",
  "2.092afbaa57d1218da8fb.js.map": "2a05f3569e6aea08ffaad89852ad5f8c",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "3.724e9291ed4ab29de160.js": "1bb44ae70046b0a9a0c9dc7ef126f8c8",
  "3.724e9291ed4ab29de160.js.map": "359ee838fcc6d62b2eba8f162c7fbaea",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "index.html": "16a4143d3e18d2b7e69c9299470a0835",
  "main.ce97d6f39fc2fdc77993.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.ce97d6f39fc2fdc77993.js": "c20068b090eed6f7fe00eb0a0a2ca4a2",
  "main.ce97d6f39fc2fdc77993.js.map": "72c863c4dbd00f61b14f08e9b71a0b6a",
  "manifest.2962a6b0d339e9338b92.js": "e6ce3a9ed6fd133636e257f02bf53041",
  "manifest.2962a6b0d339e9338b92.js.map": "d87d7f424a6e958b4db99073208e9b46",
  "vendors.517232912109a04a6e61.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.517232912109a04a6e61.js": "11a715e411a4bb7278b9ac34201ce56e",
  "vendors.517232912109a04a6e61.js.map": "d0b9fcb9428be5eb2c3ecaddc3e9d8ab",
}
`;
